@@ -1,4 +1,8 @@
 
+2013-09-15  Andreas Grapentin  <andreas@grapentin.org>
+
+	* graprof/graprof.c: tweaked top level workflow in main
+
 2013-09-04  Andreas Grapentin  <andreas@grapentin.org>
 
 	* graprof/callgraph.c: added value description to call graph
